--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
 				<activity
-                android:name=".MainActivity"
+                android:name="com.example.angela_innovator_v2.MainActivity"
                 android:label="@string/app_name">
 				</activity>
     </application>
