--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.example.innovatorTopicSelection.ProgressBarTestActivity">
+        <activity android:name="com.example.innovatorTopicSelection.TopicSelectFragment">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-				<activity
+				<!--<activity
                 android:name="com.example.angela_innovator_v2.MainActivity"
                 android:label="@string/app_name">
-				</activity>
+				</activity>-->
     </application>
 
 </manifest>
