--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Aug 03 14:41:41 EDT 2019
-sdk.dir=C\:\\Android
+#Tue Aug 20 16:08:55 EDT 2019
+sdk.dir=/Users/michelleliu/Library/Android/sdk
