--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 26 14:19:56 EDT 2019
-sdk.dir=C\:\\Users\\Tom\\AppData\\Local\\Android\\Sdk
+#Sun Oct 06 14:07:00 EDT 2019
+sdk.dir=C\:\\Android
