--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 06 14:07:00 EDT 2019
-sdk.dir=C\:\\Android
+#Fri Oct 11 19:57:09 EDT 2019
+sdk.dir=/Users/michelleliu/Library/Android/sdk
