questions + images (note: figure out how to stuff images in there)

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 11 19:57:09 EDT 2019
-sdk.dir=/Users/michelleliu/Library/Android/sdk
+#Sun Oct 20 19:45:39 EDT 2019
+sdk.dir=C\:\\Users\\Tom\\AppData\\Local\\Android\\Sdk
