Settings screen was updated, only aesthetic changes.
Added several text inputs in preparation for implementing of changing settings. Unsure if storing settings locally or in database.

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 11 19:57:09 EDT 2019
-sdk.dir=/Users/michelleliu/Library/Android/sdk
+#Mon Oct 21 08:15:51 EDT 2019
+sdk.dir=C\:\\Android
