Resolved "Unresolved reference: GoogleSignIn" issue.
A new dependency to 'com.google.android.gms:play-services-auth:16.0.1' was added to gradle.build.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'info.hoang8f:fbutton:1.0.5'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
 }
 
 repositories {
