--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 21 08:15:51 EDT 2019
-sdk.dir=C\:\\Android
+#Sat Oct 26 14:57:43 EDT 2019
+sdk.dir=C\:\\Users\\Tom\\AppData\\Local\\Android\\Sdk
