--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Oct 26 14:57:43 EDT 2019
-sdk.dir=C\:\\Users\\Tom\\AppData\\Local\\Android\\Sdk
+#Wed Dec 18 20:40:09 EST 2019
+sdk.dir=/Users/michelleliu/Library/Android/sdk
