--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.solve.Questions">
+        <activity android:name="com.example.solve.Question">
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
             </intent-filter>
