--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 10 09:45:11 EDT 2020
-sdk.dir=C\:\\Users\\gzm20\\AppData\\Local\\Android\\Sdk
+#Mon Jul 20 09:48:41 EDT 2020
+sdk.dir=C\:\\Users\\yyqqg\\AppData\\Local\\Android\\Sdk
