--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 apply plugin: 'com.android.application'
