--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()//added
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'   //change this with latest gradle version.
@@ -17,6 +18,7 @@ allprojects {
     repositories {
         jcenter()
         google()
+        mavenCentral()//added
     }
 }
 apply plugin: 'com.android.application'
