--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'info.hoang8f:fbutton:1.0.5'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.21'//added. 1.2.19 -> 1.2.21
 }
 
 repositories {
