--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Aug 16 14:23:07 EDT 2020
-sdk.dir=C\:\\Users\\kingo\\AppData\\Local\\Android\\Sdk
+#Sun Nov 22 19:36:29 EST 2020
+sdk.dir=/Users/meganyu/Library/Android/sdk
