--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,11 +32,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Question">
-            <intent-filter>
-                <action android:name="android.intent.action.DEFAULT" />
-            </intent-filter>
-        </activity>
+<!--        <activity android:name=".Question">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.DEFAULT" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
         <activity android:name=".TopicSelectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
