update gradle build

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Aug 16 14:23:07 EDT 2020
-sdk.dir=C\:\\Users\\kingo\\AppData\\Local\\Android\\Sdk
+#Tue Jul 06 13:55:30 EDT 2021
+sdk.dir=C\:\\Users\\bloon.LAPTOP-E3N0EC12.000\\AppData\\Local\\Android\\Sdk
