requires for user to sign in before retrieving questions
If the user has not already sign-in through their google account, a toast will pop up requiring them to do so. This ensures that the app does not crash by attempting to retrieve null data

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jul 06 13:55:30 EDT 2021
-sdk.dir=C\:\\Users\\bloon.LAPTOP-E3N0EC12.000\\AppData\\Local\\Android\\Sdk
+#Fri Jul 09 10:06:01 EDT 2021
+sdk.dir=C\:\\Users\\ehu94\\AppData\\Local\\Android\\Sdk
