--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jul 06 13:55:30 EDT 2021
-sdk.dir=C\:\\Users\\bloon.LAPTOP-E3N0EC12.000\\AppData\\Local\\Android\\Sdk
+#Fri Jul 09 11:58:06 EDT 2021
+sdk.dir=C\:\\Users\\bloon\\AppData\\Local\\Android\\Sdk
