added notifs to settings screen, sends notif 10 seconds after save

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <receiver android:name=".ReminderBroadcast"/>
+
     </application>
 
 </manifest>
