--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ReadingQuestions"></activity>
-        <activity android:name=".MainMenuActivity">
+        <activity android:name=".MainMenuController">
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
             </intent-filter>
