--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jul 09 11:58:06 EDT 2021
-sdk.dir=C\:\\Users\\bloon\\AppData\\Local\\Android\\Sdk
+#Wed Jul 21 09:57:11 EDT 2021
+sdk.dir=C\:\\Users\\ethan_vri3g7p\\AppData\\Local\\Android\\Sdk
