Worked on Daily Challenge layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
                 <action android:name="android.intent.action.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".DailyChallenge">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT"/>
+            </intent-filter>
+        </activity>
         <activity android:name=".QuestionMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
