--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     implementation platform('com.google.firebase:firebase-bom:28.2.1')
+
+    implementation 'org.mongodb:mongodb-driver-sync:4.1.2'
 }
 
 repositories {
