--- a/build.gradle
+++ b/build.gradle
@@ -54,5 +54,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation 'org.mongodb:mongodb-driver-sync:4.1.2'
 
 }
