--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Aug 10 10:02:59 EDT 2021
-sdk.dir=C\:\\Users\\ehu94\\AppData\\Local\\Android\\Sdk
+#Fri Sep 17 21:58:46 EDT 2021
+sdk.dir=C\:\\Users\\bloon\\AppData\\Local\\Android\\Sdk
