--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ captures/
 .idea/dictionaries
 .idea/libraries
 .idea/caches
+.idea/misc.xml
+.idea/shelf
+
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
