--- a/.gitignore
+++ b/.gitignore
@@ -34,15 +34,7 @@ captures/
 
 # IntelliJ
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/dictionaries
-.idea/libraries
-.idea/caches
-.idea/misc.xml
-.idea/shelf
+.idea/
 
 
 # Keystore files
