--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Sep 17 21:58:46 EDT 2021
-sdk.dir=C\:\\Users\\bloon\\AppData\\Local\\Android\\Sdk
+#Sat Jun 10 18:07:38 CDT 2023
+
+#CHANGE THIS
+
+sdk.dir=C\:\\Users\\Chi\\AppData\\Local\\Android\\Sdk
