--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,3 +70,11 @@ dependencies {
 repositories {
     mavenCentral()
 }
+
+task wrapper(type: Wrapper){
+    gradleVersion = '7.2'
+}
+
+task prepareKotlinBuildScriptModel {
+
+}
